gvb_interp/src/snapshots/gvb_interp__parser__parser_tests__error_recovery__expected_symbols_after_colon.snap
---
source: gvb_interp/src/parser.rs
expression: parse_line(line).1

---
Some(
    [
        Term(
            ":",
        ),
        Nonterm(
            Stmt,
        ),
    ],
)
